--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>JavaScript</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Practice</h1>
 
         <script src="./main.js"></script>
     </body>
